# corepulse-mlx

./: .gitignore  ADVANCED_ARTISTIC_RESULTS.md  CAPABILITIES.md  CAPABILITIES_COMPARISON.md  CLAUDE.md  COMPLETE_RESULTS.md  COMPREHENSIVE_TEST_SUITE.md  COREPULSE_API.md  COREPULSE_MLX_SUCCESS.md  COREPULSE_README.md  COREPULSE_TESTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MISSING_CAPABILITIES.md  PRODUCT_PLACEMENT_README.md  PROJECT_COMPLETE.md  PROOF_OF_EXTRACTION.md  README.md  README_COREPULSE.md  REFACTORING_COMPLETE.md  SEMANTIC_REPLACEMENT_GUIDE.md  TECHNICAL_COMPARISON.md  TRUE_CAPABILITIES.md  USE_CASES.md  analyze_true_injection.py  corepulse_mlx.py  create_proper_demos.py  datavoid_injection.py  datavoid_style_injection.py  datavoid_unet.py  debug_attention_type.py  debug_conditioning.py  debug_kv_hooks.py  debug_shape.py  demonstrate_everything.py  dogfood_analysis_v1.json  dogfood_honey_v3_report.json  extreme_injection.py  final_breakthrough_showcase.py  fix_injection_scaling.py  (+139 more)
.claude-flow/metrics/: system-metrics.json
.swarm/: memory.db-shm  memory.db-wal
CorePulse/: README.md  advanced_control_examples.py  attention_examples.py  examples.py  pyproject.toml  sdxl_examples.py
CorePulse-LLM/: .gitignore  attention_masking_examples.py  llm_attention_examples.py  spatial_injection_examples.py  test_multi_scale_examples.py
CorePulse/core_pulse/: __init__.py
CorePulse/core_pulse/models/: __init__.py  unet_patcher.py
CorePulse/core_pulse/prompt_injection/: __init__.py  attention.py  base.py  self_attention.py
CorePulse/tests/models/: test_unet_patcher.py
CorePulse/tests/prompt_injection/: test_attention.py
artifacts/: mathematical_proof.json
artifacts/configs/: campaign_deployment_package.json  dogfood_analysis_v2.json  dogfood_analysis_v3.json  dogfood_realistic_report.json  honey_jar_test_config.json  honey_v3_results.json  product_preservation_config.json  v4_implementation_plan.json
corpus_mlx/: attention.py  optimizations.py  sd_wrapper.py  sd_wrapper_enhanced.py  sd_wrapper_fixed.py  sd_wrapper_simple.py  sdxl_wrapper.py  utils.py  utils_extended.py
docs/: SDXL_README.md
docs/status/: IMPLEMENTATION_STATUS.md  (+3 more)
examples/: 01_basic_semantic_replacement.py  01_get_schwifty.py  02_comparison_generation.py  02_portal_gun.py  03_multiple_replacements.py  03_pickle_rick.py  04_combined_with_injection.py  04_meeseeks.py  05_comparison_of_approaches.py  05_plumbus.py  CLAUDE.md  demo_all_techniques.py  demo_basic.py  demo_masked.py  demo_multi_prompt.py  demo_product.py  demo_weighted.py  generate_boy_cat.py
plugins/: CLAUDE.md  product_placement.py  regional_prompt.py
scripts/: CLAUDE.md  corpus_txt2img.py  corpus_txt2img_fixed.py  create_showcase_grid.py  run_demo.sh
src/: __init__.py
stable_diffusion/: CLAUDE.md
tests/: CLAUDE.md  test_basic.py  test_equivalence.py  test_injection.py  test_masks.py
(+61 files in other folders)
