[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-mlx"
version = "0.1.0"
description = "CorePulse × MLX Stable Diffusion: prompt injection, masking, regional control"
authors = [{name="CorePulse Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    # "mlx",    # install separately following Apple MLX instructions
    # "Pillow", # only if you use examples/product placement
]

[project.urls]
homepage = "https://example.com/corpus-mlx"
