[metadata]
name = corpus-mlx
version = attr: corpus_mlx.__version__

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    mlx>=0.5.0
    mlx-lm>=0.0.6

[options.packages.find]
where = src

[options.extras_require]
stable-diffusion =
    Pillow>=9.0.0
    huggingface-hub>=0.19.0
    safetensors>=0.4.0
    tqdm
dev =
    pytest>=7.0.0
    black>=23.0.0
    ruff>=0.1.0
    mypy>=1.0.0