[project]
name = "core-pulse"
version = "0.1.0"
description = "CorePulse: A modular toolkit for advanced diffusion model manipulation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
    "diffusers",
    "transformers",
    "accelerate",
    "safetensors",
    "Pillow",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow to run",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
transformers = { git = "https://github.com/huggingface/transformers.git" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true